# opcodes

./: .gitignore  CHANGES.md  CMakeLists.txt  Makefile  code.c  colors.c  disassembly.c  instrutions_format.c  instrutions_format.h  opcodes_prefix.c  opcodes_prefix.h  print_structs_format.c  print_structs_format.h  stringx.c
.github/workflows/: ci.yml
include/: section_macro.h  x86_opcodes.h
opcodes/: 8086.c  8086.h
src/: opcodes_prefix.c
tests/: test_opcodes.c
